src/test/fz/errors/road-cons/dznFolder/road_17.dzn
n=17;
budget=1049;
distance=[|0,286,248,255,135,179,170,218,163,93,97,177,11,75,299,238,206|286,0,1,264,190,76,116,278,178,121,101,53,177,37,159,105,1|248,1,0,287,299,9,66,260,116,223,193,202,189,42,286,180,260|255,264,287,0,118,75,54,2,237,175,295,295,109,4,68,252,58|135,190,299,118,0,78,251,209,291,217,22,135,129,51,196,165,217|179,76,9,75,78,0,89,112,264,80,293,195,24,202,158,108,150|170,116,66,54,251,89,0,58,84,292,189,278,143,97,71,96,241|218,278,260,2,209,112,58,0,36,299,29,103,92,139,6,182,210|163,178,116,237,291,264,84,36,0,97,184,203,233,219,95,37,269|93,121,223,175,217,80,292,299,97,0,84,275,255,70,41,251,32|97,101,193,295,22,293,189,29,184,84,0,167,251,47,240,25,142|177,53,202,295,135,195,278,103,203,275,167,0,179,98,159,277,140|11,177,189,109,129,24,143,92,233,255,251,179,0,210,249,262,300|75,37,42,4,51,202,97,139,219,70,47,98,210,0,166,267,52|299,159,286,68,196,158,71,6,95,41,240,159,249,166,0,99,187|238,105,180,252,165,108,96,182,37,251,25,277,262,267,99,0,104|206,1,260,58,217,150,241,210,269,32,142,140,300,52,187,104,0|];
cost=[|0,19,64,35,37,49,34,34,45,43,20,63,60,10,64,3,35|19,0,67,46,21,15,21,48,53,69,48,64,16,36,70,5,62|64,67,0,24,7,65,29,17,39,18,32,8,3,49,70,66,31|35,46,24,0,47,41,6,32,41,13,56,25,44,58,61,54,17|37,21,7,47,0,6,70,34,27,27,10,30,32,16,57,32,47|49,15,65,41,6,0,9,43,61,46,44,3,68,56,65,48,17|34,21,29,6,70,9,0,40,57,37,56,39,26,41,10,19,51|34,48,17,32,34,43,40,0,17,18,20,10,51,4,13,26,37|45,53,39,41,27,61,57,17,0,68,9,18,38,56,2,50,49|43,69,18,13,27,46,37,18,68,0,44,61,40,63,19,37,39|20,48,32,56,10,44,56,20,9,44,0,6,1,40,29,47,40|63,64,8,25,30,3,39,10,18,61,6,0,10,19,3,68,32|60,16,3,44,32,68,26,51,38,40,1,10,0,59,55,33,36|10,36,49,58,16,56,41,4,56,63,40,19,59,0,65,51,6|64,70,70,61,57,65,10,13,2,19,29,3,55,65,0,8,60|3,5,66,54,32,48,19,26,50,37,47,68,33,51,8,0,63|35,62,31,17,47,17,51,37,49,39,40,32,36,6,60,63,0|];
